// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Testing MessageExamples component Test operation with multiple examples 1`] = `
"**Example (JavaScript):**
\`\`\`javascript
client.multipleExamples(\\"test\\")
\`\`\`


**Example (Python):**
\`\`\`python
client.multiple_examples(\\"test\\")
\`\`\`


**Example (JavaScript):**
\`\`\`javascript
client.multipleExamples(false)
\`\`\`


**Example (Python):**
\`\`\`python
client.multiple_examples(false)
\`\`\`


**Example (JavaScript):**
\`\`\`javascript
client.multipleExamples(123)
\`\`\`


**Example (Python):**
\`\`\`python
client.multiple_examples(123)
\`\`\`"
`;

exports[`Testing MessageExamples component Test operation with multiple messages and multiple examples 1`] = `
"**Example (JavaScript):**
\`\`\`javascript
client.mixedMessageExamples(\\"test\\")
\`\`\`


**Example (Python):**
\`\`\`python
client.mixed_message_examples(\\"test\\")
\`\`\`


**Example (JavaScript):**
\`\`\`javascript
client.mixedMessageExamples(\\"test\\")
\`\`\`


**Example (Python):**
\`\`\`python
client.mixed_message_examples(\\"test\\")
\`\`\`


**Example (JavaScript):**
\`\`\`javascript
client.mixedMessageExamples(false)
\`\`\`


**Example (Python):**
\`\`\`python
client.mixed_message_examples(false)
\`\`\`


**Example (JavaScript):**
\`\`\`javascript
client.mixedMessageExamples(123)
\`\`\`


**Example (Python):**
\`\`\`python
client.mixed_message_examples(123)
\`\`\`"
`;

exports[`Testing MessageExamples component Test operation with no message examples 1`] = `""`;

exports[`Testing MessageExamples component Test operation with no messages 1`] = `""`;

exports[`Testing MessageExamples component Test operation with one example 1`] = `
"**Example (JavaScript):**
\`\`\`javascript
client.oneMessageExample(\\"test\\")
\`\`\`


**Example (Python):**
\`\`\`python
client.one_message_example(\\"test\\")
\`\`\`"
`;
